[tool.poetry]
name = "visualize-cost-rev"
version = "0.1.0"
description = "To Visualize cost and revenue numbers of a fake company"
authors = ["Francis Fang <francis.fang@zendesk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
faker = "^37.3.0"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
